--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   carousel_slider: ^5.0.0
   intl: ^0.18.0
   http: ^1.3.0
+  shared_preferences: ^2.3.0
 
 dev_dependencies:
   flutter_test:
