--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.20.2
   http: ^1.3.0
   shared_preferences: ^2.3.0
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
